--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/mainBackground"
     tools:context="bignerdrunch.brestblacklistgen.MainActivity">
+
 
 
     <android.support.design.widget.CoordinatorLayout android:id="@+id/coordinator_layout"
