--- a/app/src/main/res/layout/fragment_health_and_beauty.xml
+++ b/app/src/main/res/layout/fragment_health_and_beauty.xml
@@ -2,12 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </ListView>
+    <include layout="@layout/fragment_crime"/>
 
 </LinearLayout>
