--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,8 @@
                 app:tabIndicatorColor="@android:color/white"
                 app:tabIndicatorHeight="6dp"
                 app:tabTextColor="@android:color/white"
-                app:tabSelectedTextColor="@android:color/white"/>
+                app:tabSelectedTextColor="@android:color/white"
+                app:tabMode="scrollable"/>
 
         </android.support.design.widget.AppBarLayout>
 
@@ -56,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@android:drawable/ic_dialog_email"/>
+            android:src="@drawable/ic_plus"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
