--- a/app/src/main/res/layout/fragment_fun.xml
+++ b/app/src/main/res/layout/fragment_fun.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Fun"
-        android:layout_gravity="center"
-        android:textSize="35sp"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvFun"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:clipToPadding="false"
+        android:paddingBottom="88dp"/>
 
 </FrameLayout>
