--- a/app/src/main/res/layout/fragment_health_and_beauty.xml
+++ b/app/src/main/res/layout/fragment_health_and_beauty.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".list_fragments.BeautyAndHealthFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BNH"
-        android:layout_gravity="center"
-        android:textSize="35sp"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvBeauty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="88dp"
+        android:scrollbars="vertical" />
 
 </FrameLayout>
