--- a/app/src/main/res/layout/model_crime.xml
+++ b/app/src/main/res/layout/model_crime.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvCrimeTitle"
         android:textSize="16sp"
         android:textColor="@color/primary_text_default_material_light"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="72dp"
         android:layout_marginTop="16dp"
         android:layout_toRightOf="@+id/tvCrimeDate"
         android:layout_alignParentLeft="true"/>
@@ -26,5 +26,13 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
         android:layout_marginTop="19dp"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/cvTaskPriority"
+        android:layout_height="40dp"
+        android:layout_width="40dp"
+        android:src="@color/colorPrimaryDark"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"/>
 
 </RelativeLayout>
