--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,15 @@
     <color name="mainBackground">#DFDFDF</color>
     <color name="colorAccent">#FF6500</color>
     <color name="colorWhite">#ffffff</color>
+
+    <color name="priority_high">#E57373</color>
+    <color name="priority_normal">#81c784</color>
+    <color name="priority_low">#4fc3f7</color>
+
+    <color name="priority_high_selected">#FFCDD2</color>
+    <color name="priority_normal_selected">#c8e6c9</color>
+    <color name="priority_low_selected">#b3e5fc</color>
+
+    <color name="gray_50">#FAFAFA</color>
+    <color name="gray_200">#EEEEEE</color>
 </resources>
