--- a/app/src/main/res/layout/fragment_health_and_beauty.xml
+++ b/app/src/main/res/layout/fragment_health_and_beauty.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
     tools:context=".list_fragments.BeautyAndHealthFragment">
 
     <android.support.v7.widget.RecyclerView
@@ -13,4 +16,4 @@
         android:paddingBottom="88dp"
         android:scrollbars="vertical" />
 
-</FrameLayout>
+</LinearLayout>
