--- a/app/src/main/res/layout/model_crime.xml
+++ b/app/src/main/res/layout/model_crime.xml
@@ -1,38 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:background="?android:attr/selectableItemBackground"
-    android:clickable="true">
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginBottom="8dp"
+    card:cardBackgroundColor="@color/cardview_light_background"
+    card:cardCornerRadius="4dp"
+    card:cardElevation="5dp"
+    card:cardUseCompatPadding="true">
 
-    <TextView
-        android:layout_width="160dp"
+    <LinearLayout
+        android:id="@+id/card_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvCrimeTitle"
-        android:textSize="16sp"
-        android:textColor="@color/primary_text_default_material_light"
-        android:layout_marginLeft="72dp"
-        android:layout_marginTop="16dp"
-        android:layout_toRightOf="@+id/tvCrimeDate"
-        android:layout_alignParentLeft="true"/>
+        android:layout_width="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCrimeDate"
-        android:gravity="right"
-        android:textSize="14sp"
-        android:textColor="@color/secondary_text_default_material_light"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="19dp"/>
+        <ImageView
+            android:id="@+id/card_image_view"
+            android:layout_height="200dp"
+            android:layout_width="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/olekhnovich"/>
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/cvTaskPriority"
-        android:layout_height="40dp"
-        android:layout_width="40dp"
-        android:src="@color/colorPrimaryDark"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"/>
+        <TextView
+            android:id="@+id/tvCrimeTitle"
+            android:layout_below="@id/card_image_view"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/primary_text_default_material_light"
+            android:textSize="16sp" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/tvCrimeDate"
+            android:layout_below="@+id/tvCrimeTitle"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/secondary_text_default_material_light"
+            android:textSize="14sp" />
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
+
