--- a/app/src/main/res/layout/model_crime.xml
+++ b/app/src/main/res/layout/model_crime.xml
@@ -46,6 +46,11 @@
             android:textColor="@color/secondary_text_default_material_light"
             android:textSize="14sp" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/test_hashtag_assignment" />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
