--- a/app/src/main/res/layout/model_crime.xml
+++ b/app/src/main/res/layout/model_crime.xml
@@ -5,53 +5,53 @@
     android:id="@+id/cardView"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginBottom="8dp"
+    android:layout_margin="8dp"
     card:cardBackgroundColor="@color/cardview_light_background"
-    card:cardCornerRadius="4dp"
-    card:cardElevation="5dp"
-    card:cardUseCompatPadding="true">
+    card:cardCornerRadius="10dp"
+    card:cardElevation="5dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/card_content"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/test_hashtag_assignment"
+            android:layout_margin="8dp"/>
 
         <ImageView
             android:id="@+id/card_image_view"
             android:layout_height="200dp"
             android:layout_width="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/olekhnovich"/>
+            android:layout_below="@+id/test_hashtag_assignment"
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/tvCrimeTitle"
             android:layout_below="@id/card_image_view"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="8dp"
+            android:layout_margin="8dp"
             android:textColor="@color/primary_text_default_material_light"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvCrimeDate"
-            android:layout_below="@+id/tvCrimeTitle"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="10dp"
             android:textColor="@color/secondary_text_default_material_light"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:layout_marginRight="8dp"
+            android:layout_alignBottom="@+id/tvCrimeTitle"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="8dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test_hashtag_assignment" />
 
-    </LinearLayout>
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
 
