--- a/app/src/main/res/layout/model_card.xml
+++ b/app/src/main/res/layout/model_card.xml
@@ -5,9 +5,11 @@
     android:id="@+id/cardView"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_margin="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
     card:cardBackgroundColor="@color/cardview_light_background"
-    card:cardCornerRadius="10dp"
+    card:cardCornerRadius="5dp"
     card:cardElevation="5dp">
 
     <RelativeLayout
