--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,14 @@
     android:layout_height="match_parent"
     android:background="@color/mainBackground"
     android:fitsSystemWindows="true"
-    tools:context="bignerdrunch.brestblacklistgen.MainActivity">
+    tools:context="com.pain.fleetin.brestblacklist.MainActivity">
 
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="bignerdrunch.brestblacklistgen.MainActivity">
+        tools:context="com.pain.fleetin.brestblacklist.MainActivity">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
