--- a/app/src/main/res/layout/dialog_crime.xml
+++ b/app/src/main/res/layout/dialog_crime.xml
@@ -97,7 +97,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
-                android:id="@+id/take_picture_button_frame">
+                android:layout_marginBottom="16dp"
+                android:id="@+id/take_picture_button_frame"
+                android:clickable="true">
 
                 <Button
                     android:layout_width="wrap_content"
