vkQuery with images. Search needs to be fixed.

--- a/app/src/main/res/layout/model_card.xml
+++ b/app/src/main/res/layout/model_card.xml
@@ -6,32 +6,31 @@
     android:layout_width="match_parent"
     card:cardBackgroundColor="@color/cardview_light_background"
     card:cardCornerRadius="0dp"
-    card:cardElevation="2dp">
+    card:cardElevation="2dp"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp">
 
     <RelativeLayout
         android:id="@+id/card_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test_hashtag_assignment"
-            android:layout_margin="8dp"/>
 
         <ImageView
             android:id="@+id/card_image_view"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_below="@+id/test_hashtag_assignment"
-            android:scaleType="centerCrop" />
+            android:layout_margin="8dp"
+            android:scaleType="fitCenter" />
 
         <TextView
             android:id="@+id/tvCrimeTitle"
             android:layout_below="@id/card_image_view"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="6dp"
             android:textColor="@color/primary_text_default_material_light"
             android:textSize="16sp" />
 
@@ -42,10 +41,11 @@
             android:textColor="@color/secondary_text_default_material_light"
             android:textSize="14sp"
             android:layout_marginRight="8dp"
-            android:layout_alignBottom="@+id/tvCrimeTitle"
+            android:layout_below="@+id/tvCrimeTitle"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"/>
 
 
 
