one photo upload. Navigation drawer. Photo rotate on some devices fixed. List refreshing.

--- a/app/src/main/res/layout/model_card.xml
+++ b/app/src/main/res/layout/model_card.xml
@@ -6,10 +6,9 @@
     android:layout_width="match_parent"
     card:cardBackgroundColor="@color/cardview_light_background"
     card:cardCornerRadius="0dp"
-    card:cardElevation="2dp"
-    android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp"
-    android:clickable="true">
+    card:cardElevation="3dp"
+    android:clickable="true"
+    android:layout_marginBottom="5dp">
 
     <RelativeLayout
         android:id="@+id/card_content"
@@ -47,17 +46,6 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvCrimeDate"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:id="@+id/postId"
-            android:visibility="visible"/>
-
-
 
     </RelativeLayout>
 
