--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_search"
         android:orderInCategory="1"
-        android:title="@string/search_title"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_magnify"/>
+        android:icon="@drawable/ic_magnify"
+        android:title="@string/search_title" />
 </menu>
