--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     android:id="@+id/refresh"
-    tools:context=".list_fragments.BeautyAndHealthFragment">
+    tools:context=".list_fragments.MainFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvBeauty"
