--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,10 +2,24 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.pain.fleetin.brestblacklist.MainActivity">
-    <item
+    <!--<item
         android:id="@+id/action_search"
         android:orderInCategory="1"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_magnify"
-        android:title="@string/search_title" />
+        android:title="@string/search_title" />-->
+
+    <!--<item
+        android:id="@+id/action_menu"
+        android:orderInCategory="2"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_dots_vertical"
+        android:title="@string/search_title" />-->
+
+    <item
+        android:id="@+id/menu_logout"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="@string/logout" />
+
 </menu>
